# AnalysisLayer

./: .env.example  .fix_spec_v2.txt  .gitignore  README.md  analysis-layer-prd.md  cli.py  custom_scenarios_results.html  docker-compose.yml  generate_md_report.py  generate_report.py  pyproject.toml  requirements.txt
analysis_layer/: __init__.py  config.py  evidence_bearing.py
analysis_layer/calibration/: __init__.py  scoring.py  store.py
analysis_layer/models/: __init__.py  client.py  mock_reasoner.py  prompts.py  tasks.py  tiers.py
analysis_layer/pipeline/: __init__.py  aggregate.py  assumptions.py  cluster.py  confidence.py  grade.py  hypotheses.py  intake.py  likelihood.py  matrix.py  orchestrator.py  redteam.py  scales.py  synthesis.py  test_step.py  weight.py
analysis_layer/schema/: __init__.py  assessment.py  signals.py  state.py
analysis_layer/simulator/: __init__.py  backtest.py  ensemble_battery.py  generator.py  harness_checks.py  invariants.py  loader.py  reference.py  report_builder.py  scoreboard.py  shadow.py  synthetic.py
analysis_layer/simulator/scenarios/: deception_confirmed_planted_feint.json  deception_feint_masking_increase.json  deception_trap.json  echo_cluster.json  echo_inflation_no_real_signal.json  fifty_fifty_mixed.json  high_volume_rich_stream.json  minimal_single_signal.json  mirror_imaging_trap.json  no_change_null.json  noise_pileup_vs_signal.json  only_correct_data.json  only_wrong_data.json  price_cut_clean.json  (+5 more)
tests/: conftest.py  test_calibration.py  test_ensemble_shadow.py  test_fix_spec_v2.py  test_fixtures.py  test_invariants.py  test_model_client.py  test_pipeline_order.py  test_schema.py  test_scoreboard.py  test_section6.py  test_synthetic.py
